applications/mqtt-things/0-prerequisites.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mqtt-things
  labels:
    name: mqtt-things
