applications/mqtt-things/mqtt-monitor.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-monitor
  labels:
    app: mqtt-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt-monitor
  template:
    metadata:
      labels:
        app: mqtt-monitor
    spec:
      containers:
        - name: mqtt-monitor
          image: hivemq/mqtt-cli:latest
          args:
            [
              "sub",
              "-h",
              "mqtt-broker",
              "-t",
              "+/#",
              "-i",
              "mqttmonitor",
            ]
