applications/mqtt-things/sensors-cli.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: mqtt-things
  name: sensors-cli
  labels:
    app: sensors-cli
spec:
  serviceName: sensors-cli
  replicas: 1
  selector:
    matchLabels:
      app: sensors-cli
  template:
    metadata:
      labels:
        app: sensors-cli
    spec:
      hostNetwork: true
      containers:
        - name: sensors-cli
          image: initialed85/mqtt-things-sensors-cli:latest
          imagePullPolicy: Always
          resources: {}
          command:
            [
              "/srv/entrypoint",
              "-host",
              "$(MQTT_BROKER_HOST)",
              "-apiKey",
              "$(API_KEY)",
              "-bridgeHost",
              "$(BRIDGE_HOST)",
            ]
