applications/mqtt-things/smart-aircons-cli.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: mqtt-things
  name: smart-aircons-cli
  labels:
    app: smart-aircons-cli
spec:
  serviceName: smart-aircons-cli
  replicas: 1
  selector:
    matchLabels:
      app: smart-aircons-cli
  template:
    metadata:
      labels:
        app: smart-aircons-cli
    spec:
      hostNetwork: true
      containers:
        - name: smart-aircons-cli
          image: initialed85/mqtt-things-smart-aircons-cli:latest
          imagePullPolicy: Always
          command:
            [
              "/srv/entrypoint",
              "-host",
              "$(MQTT_BROKER_HOST)",

              "-airconHost",
              "$(AIRCON_HOST_1)",
              "-airconName",
              "$(AIRCON_NAME_1)",
              "-airconCodesName",
              "$(AIRCON_CODES_NAME_1)",

              "-airconHost",
              "$(AIRCON_HOST_2)",
              "-airconName",
              "$(AIRCON_NAME_2)",
              "-airconCodesName",
              "$(AIRCON_CODES_NAME_2)",

              "-airconHost",
              "$(AIRCON_HOST_3)",
              "-airconName",
              "$(AIRCON_NAME_3)",
              "-airconCodesName",
              "$(AIRCON_CODES_NAME_3)",

              "-airconHost",
              "$(AIRCON_HOST_4)",
              "-airconName",
              "$(AIRCON_NAME_4)",
              "-airconCodesName",
              "$(AIRCON_CODES_NAME_4)",
            ]
