applications/mqtt-things/sprinklers-cli.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    namespace: mqtt-things
    name: sprinklers-cli
    labels:
        app: sprinklers-cli
spec:
    serviceName: sprinklers-cli
    replicas: 1
    selector:
        matchLabels:
            app: sprinklers-cli
    template:
        metadata:
            labels:
                app: sprinklers-cli
        spec:
            nodeSelector:
                home-role: iot
                iot-role: sprinklers
            volumes:
                - name: dev-ttyacm-0
                  hostPath:
                      path: /dev/ttyACM0
            containers:
                - name: sprinklers-cli
                  image: initialed85/mqtt-things-sprinklers-cli:latest
                  imagePullPolicy: Always
                  securityContext:
                      privileged: true
                  volumeMounts:
                      - mountPath: /dev/ttyACM0
                        name: dev-ttyacm-0
                  resources: {}
                  command:
                      [
                          "/srv/entrypoint",
                          "-host",
                          "$(MQTT_BROKER_HOST)",
                          "-port",
                          "$(SERIAL_PORT)",
                          "-relay",
                          "$(RELAY_1_INDEX)",
                          "-relay",
                          "$(RELAY_2_INDEX)",
                      ]
