applications/mqtt-things/weather-cli.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: mqtt-things
  name: weather-cli
  labels:
    app: weather-cli
spec:
  serviceName: weather-cli
  replicas: 1
  selector:
    matchLabels:
      app: weather-cli
  template:
    metadata:
      labels:
        app: weather-cli
    spec:
      containers:
        - name: weather-cli
          image: initialed85/mqtt-things-weather-cli:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: {}
          command:
            [
              "/srv/entrypoint",
              "-host",
              "$(MQTT_BROKER_HOST)",
              "-port",
              "$(PORT)",
              "-latitude",
              "$(LATITUDE)",
              "-longitude",
              "$(LONGITUDE)",
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: weather-cli
  namespace: mqtt-things
  labels:
    monitoring: "true"
spec:
  selector:
    app: weather-cli
  ports:
    - name: weather-cli
      port: 80
      targetPort: 80
