applications/mqtt-things/http-cli.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: mqtt-things
  name: http-cli
  labels:
    app: http-cli
spec:
  serviceName: http-cli
  replicas: 1
  selector:
    matchLabels:
      app: http-cli
  template:
    metadata:
      labels:
        app: http-cli
    spec:
      containers:
        - name: http-cli
          image: initialed85/mqtt-things-http-cli:latest
          imagePullPolicy: Always
          command: ["/srv/entrypoint", "-host", "$(MQTT_BROKER_HOST)", "-port", "$(PORT)"]
          ports:
            - containerPort: 8079
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: http-cli
  namespace: mqtt-things
  labels:
    monitoring: "true"
spec:
  selector:
    app: http-cli
  ports:
    - name: http-cli
      port: 8079
      targetPort: 8079
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mqtt-things
  name: http-cli
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - http-cli.initialed85.cc
      secretName: http-cli
  rules:
    - host: http-cli.initialed85.cc
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: http-cli
                port:
                  number: 8079
