applications/mqtt-things/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mqtt-things
  name: mqtt-things
spec:
  ingressClassName: traefik
  rules:
    - host: rtupdate.wunderground.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: weather-cli
                port:
                  number: 80
