applications/mqtt-things/topic-exporter-cli.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: mqtt-things
  name: topic-exporter-cli
  labels:
    app: topic-exporter-cli
spec:
  serviceName: topic-exporter-cli
  replicas: 1
  selector:
    matchLabels:
      app: topic-exporter-cli
  template:
    metadata:
      labels:
        app: topic-exporter-cli
    spec:
      containers:
        - name: topic-exporter-cli
          image: initialed85/mqtt-things-topic-exporter-cli:latest
          imagePullPolicy: Always
          resources: {}
          command: ["/srv/entrypoint", "-host", "$(MQTT_BROKER_HOST)"]
          ports:
            - containerPort: 9137
---
apiVersion: v1
kind: Service
metadata:
  name: topic-exporter-cli
  namespace: mqtt-things
  labels:
    monitoring: "true"
spec:
  selector:
    app: topic-exporter-cli
  ports:
    - name: topic-exporter-cli
      port: 9137
      targetPort: 9137
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mqtt-things
  name: topic-exporter-cli
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - topic-exporter-cli.initialed85.cc
      secretName: topic-exporter-cli
  rules:
    - host: topic-exporter-cli.initialed85.cc
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: topic-exporter-cli
                port:
                  number: 9137
